# Social-Listening

./: .env.example  .gitignore  CLAUDE.md  POC_README.md  README_overall_report.md  beautiful_soup_scrap.py  debug_response.html  mcp_beautifulsopu_gemini_notion.py  mcp_gemini_notion.py  output_beautifulsoup._txt  output_firecrawl.txt  output_pipeline_sample.json  output_scrapegraphai.json  pyproject.toml  scrape_to_notion.py  social_listening_gemini_report.md  social_listening_pipeline.py  test_firecrawl.py  test_scrapegraphai.py
output_scrap/: output2_scrapegraphai.json  output_english_scrapegraphai.json
