[project]
name = "social-listening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "firecrawl-py>=4.27.1",
    "langchain-anthropic>=1.4.3",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "notion-client>=3.1.0",
    "requests>=2.34.2",
    "scrapegraphai>=1.76.0",
]
